--- a/.travis.yml
+++ b/.travis.yml
@@ -21,64 +21,64 @@ matrix:
     # builders so heavily that we otherwise can't merge PRs during the work week.
     # Additionally they're moved to the front of the line to get them in the Travis
     # OS X build queue first.
-    - env: TARGET="aarch64-apple-ios;armv7-apple-ios;armv7s-apple-ios;i386-apple-ios;x86_64-apple-ios" DISABLE_TESTS=1
-      rust: 1.20.0
-      os: osx
+    #- env: TARGET="aarch64-apple-ios;armv7-apple-ios;armv7s-apple-ios;i386-apple-ios;x86_64-apple-ios" DISABLE_TESTS=1
+    #  rust: 1.20.0
+    #  os: osx
 
     # Mac builds
     # These are also moved to be first because they wait in a long queue with Travis
-    - env: TARGET=i686-apple-darwin
-      rust: 1.20.0
-      os: osx
-    - env: TARGET=x86_64-apple-darwin
-      rust: 1.20.0
-      os: osx
+    #- env: TARGET=i686-apple-darwin
+    #  rust: 1.20.0
+    #  os: osx
+    #- env: TARGET=x86_64-apple-darwin
+    #  rust: 1.20.0
+    #  os: osx
 
     # Android
-    - env: TARGET=aarch64-linux-android DISABLE_TESTS=1
-      rust: 1.20.0
-    - env: TARGET=arm-linux-androideabi DISABLE_TESTS=1
-      rust: 1.20.0
-    - env: TARGET=armv7-linux-androideabi DISABLE_TESTS=1
-      rust: 1.20.0
-    - env: TARGET=i686-linux-android DISABLE_TESTS=1
-      rust: 1.20.0
-    - env: TARGET=x86_64-linux-android DISABLE_TESTS=1
-      rust: 1.20.0
+    #- env: TARGET=aarch64-linux-android DISABLE_TESTS=1
+    #  rust: 1.20.0
+    #- env: TARGET=arm-linux-androideabi DISABLE_TESTS=1
+    #  rust: 1.20.0
+    #- env: TARGET=armv7-linux-androideabi DISABLE_TESTS=1
+    #  rust: 1.20.0
+    #- env: TARGET=i686-linux-android DISABLE_TESTS=1
+    #  rust: 1.20.0
+    #- env: TARGET=x86_64-linux-android DISABLE_TESTS=1
+    #  rust: 1.20.0
 
     # Linux
-    - env: TARGET=aarch64-unknown-linux-gnu
-      rust: 1.20.0
-    - env: TARGET=arm-unknown-linux-gnueabi
-      rust: 1.20.0
-    - env: TARGET=arm-unknown-linux-musleabi DISABLE_TESTS=1
-      rust: 1.20.0
-    - env: TARGET=armv7-unknown-linux-gnueabihf
-      rust: 1.20.0
-    - env: TARGET=i686-unknown-linux-gnu
-      rust: 1.20.0
-    - env: TARGET=i686-unknown-linux-musl
-      rust: 1.20.0
-    - env: TARGET=mips-unknown-linux-gnu
-      rust: 1.20.0
-    - env: TARGET=mips64-unknown-linux-gnuabi64
-      rust: 1.20.0
-    - env: TARGET=mips64el-unknown-linux-gnuabi64
-      rust: 1.20.0
-    - env: TARGET=mipsel-unknown-linux-gnu
-      rust: 1.20.0
-    - env: TARGET=powerpc-unknown-linux-gnu DISABLE_TESTS=1
-      rust: 1.20.0
-    - env: TARGET=powerpc64-unknown-linux-gnu
-      rust: 1.20.0
-    - env: TARGET=powerpc64le-unknown-linux-gnu
-      rust: 1.20.0
-    - env: TARGET=s390x-unknown-linux-gnu DISABLE_TESTS=1
-      rust: 1.20.0
-    - env: TARGET=x86_64-unknown-linux-gnu
-      rust: 1.20.0
-    - env: TARGET=x86_64-unknown-linux-musl
-      rust: 1.20.0
+    #- env: TARGET=aarch64-unknown-linux-gnu
+    #  rust: 1.20.0
+    #- env: TARGET=arm-unknown-linux-gnueabi
+    #  rust: 1.20.0
+    #- env: TARGET=arm-unknown-linux-musleabi DISABLE_TESTS=1
+    #  rust: 1.20.0
+    #- env: TARGET=armv7-unknown-linux-gnueabihf
+    #  rust: 1.20.0
+    #- env: TARGET=i686-unknown-linux-gnu
+    #  rust: 1.20.0
+    #- env: TARGET=i686-unknown-linux-musl
+    #  rust: 1.20.0
+    #- env: TARGET=mips-unknown-linux-gnu
+    #  rust: 1.20.0
+    #- env: TARGET=mips64-unknown-linux-gnuabi64
+    #  rust: 1.20.0
+    #- env: TARGET=mips64el-unknown-linux-gnuabi64
+    #  rust: 1.20.0
+      #- env: TARGET=mipsel-unknown-linux-gnu
+      #  rust: 1.20.0
+      #- env: TARGET=powerpc-unknown-linux-gnu DISABLE_TESTS=1
+      #  rust: 1.20.0
+      #- env: TARGET=powerpc64-unknown-linux-gnu
+      #  rust: 1.20.0
+      #- env: TARGET=powerpc64le-unknown-linux-gnu
+      #  rust: 1.20.0
+      # - env: TARGET=s390x-unknown-linux-gnu DISABLE_TESTS=1
+      #  rust: 1.20.0
+      # - env: TARGET=x86_64-unknown-linux-gnu
+      #   rust: 1.20.0
+      #    - env: TARGET=x86_64-unknown-linux-musl
+      #  rust: 1.20.0
 
     # *BSD
     # FreeBSD i686 and x86_64 use BuildBot instead of Travis
@@ -86,12 +86,14 @@ matrix:
     # 1.13.0 because rustup does not support i686-unknown-freebsd
     # - env: TARGET=i686-unknown-freebsd DISABLE_TESTS=1
     # - env: TARGET=x86_64-unknown-freebsd DISABLE_TESTS=1
-    - env: TARGET=x86_64-unknown-netbsd DISABLE_TESTS=1
+#    - env: TARGET=x86_64-unknown-netbsd DISABLE_TESTS=1
+#      rust: 1.20.0
+    - env: TARGET=x86_64-unknown-openbsd DISABLE_TESTS=1
       rust: 1.20.0
 
     # Make sure stable is always working too
-    - env: TARGET=x86_64-unknown-linux-gnu
-      rust: stable
+    # - env: TARGET=x86_64-unknown-linux-gnu
+    #  rust: stable
 
 before_install: set -e
 
