WIP use doc_cfg for cross-platform documentation
This commit demonstrates the use of the unstable doc_cfg feature to make
cross-platform documentation.  Properly annotated items will be visible
in the documentation regardless of which platform it was built on.  But
there are still a few warts:

* The feature is unstable, so it must be gated by a "nightly-docs"
  feature flag.
* Rust-2015-style macros must be annotated individually, even if they're
  behind an annotated module.
* Struct members, even private ones, must be #[cfg()] gated even if
  their struct is already gated.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,13 @@ exclude     = [
   "/bors.toml"
 ]
 
+[package.metadata.docs.rs]
+features = ["nightly-docs"]
+
+[features]
+# For building documentation only; no functional change to the library.
+nightly-docs = []
+
 [dependencies]
 libc = { git = "https://github.com/rust-lang/libc" }
 bitflags = "1.0"
