Enable CI for r0.11.1 branch
Copy .cirrus.yml from master, change its Rust version, and enable this
branch for Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -137,6 +137,8 @@ branches:
   only:
     # release tags
     - /^v\d+\.\d+\.\d+.*$/
+    # release branches
+    - /^r\d+\.\d+\.\d+.*$/
     - master
     # bors-ng branches; see https://bors-ng.github.io/getting-started/
     - trying
