--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,19 @@ env:
     - RUST_TEST_THREADS=1
 
 matrix:
-  # These are all the build jobs. Adjust as necessary. Comment out what you
-  # don't need. The iOS/Mac builds are distributed throughout because Travis
-  # likes to have a big backlog on builds on those machines. This way at least
-  # all of the other jobs can finish while waiting on those builds.
   include:
     # iOS builds
     # These are all done on a single machine because Travis rations their OS X
-    # builders so heavily that we otherwise can't merge PRs during the work week.
-    # Additionally they're moved to the front of the line to get them in the Travis
-    # OS X build queue first.
+    # builders so heavily that we otherwise can't merge PRs during the work
+    # week.  Additionally they're moved to the front of the line to get them in
+    # the Travis OS X build queue first.
     - env: TARGET="aarch64-apple-ios;armv7-apple-ios;armv7s-apple-ios;i386-apple-ios;x86_64-apple-ios" DISABLE_TESTS=1
       rust: 1.24.1
       os: osx
 
     # Mac builds
-    # These are also moved to be first because they wait in a long queue with Travis
+    # These are also moved to be first because they wait in a long queue with
+    # Travis
     - env: TARGET=i686-apple-darwin
       rust: 1.24.1
       os: osx
@@ -81,9 +78,7 @@ matrix:
       rust: 1.24.1
 
     # *BSD
-    # FreeBSD i686 and x86_64 use BuildBot instead of Travis
-    # Note that i686-unknown-freebsd is actually using stable Rust instead of
-    # 1.13.0 because rustup does not support i686-unknown-freebsd
+    # FreeBSD i686 and x86_64 use Cirrus instead of Travis
     # - env: TARGET=i686-unknown-freebsd DISABLE_TESTS=1
     # - env: TARGET=x86_64-unknown-freebsd DISABLE_TESTS=1
     - env: TARGET=x86_64-unknown-netbsd DISABLE_TESTS=1
