--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -23,14 +23,29 @@ task:
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
 task:
-  name: Linux/GNU x86_64
+  name: Linux
   container:
-    matrix:
-      - image: rust:1.24.1
-      - image: rust:latest
+    - image: rust:1.24.1
   env:
     matrix:
-      - TARGET:x86_64-unknown-linux-gnu
+      - TARGET: x86_64-unknown-linux-gnu
+      - TARGET: i686-unknown-linux-gnu
+  cargo_cache:
+    folder: $CARGO_HOME/registry
+    fingerprint_script: cat Cargo.lock || echo ""
+  setup_script:
+    - uname -a
+    - cat /etc/debian_version
+    - cat /proc/cpuinfo
+    - cat /proc/crypto
+  test_script:
+    - sh ci/script.shtask:
+
+name: Linux/GNU x86_64 stable
+  container:
+    - image: rust:latest
+  env:
+    - TARGET:x86_64-unknown-linux-gnu
   cargo_cache:
     folder: $CARGO_HOME/registry
     fingerprint_script: cat Cargo.lock || echo ""
