--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,6 @@ matrix:
       rust: 1.36.0
     - env: TARGET=armv7-unknown-linux-gnueabihf
       rust: 1.36.0
-    - env: TARGET=i686-unknown-linux-gnu
-      rust: 1.36.0
     - env: TARGET=i686-unknown-linux-musl
       rust: 1.36.0
     - env: TARGET=mips-unknown-linux-gnu
@@ -70,7 +68,7 @@ matrix:
       rust: 1.36.0
     - env: TARGET=s390x-unknown-linux-gnu DISABLE_TESTS=1
       rust: 1.36.0
-    # Linux/GNU x86_64 uses Cirrus instead of Travis
+    # Linux/GNU i686 and x86_64 use Cirrus instead of Travis
     - env: TARGET=x86_64-unknown-linux-musl
       rust: 1.36.0
 
