--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -28,8 +28,8 @@ task:
     - image: rust:1.24.1
   env:
     matrix:
-      - TARGET: x86_64-unknown-linux-gnu
-      - TARGET: i686-unknown-linux-gnu
+      TARGET: x86_64-unknown-linux-gnu
+      TARGET: i686-unknown-linux-gnu
   cargo_cache:
     folder: $CARGO_HOME/registry
     fingerprint_script: cat Cargo.lock || echo ""
