Do "cargo check" instead of "cargo build" for the MSRV check
check is faster than build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -94,7 +94,7 @@ matrix:
     - rust: nightly
       script:
         - cargo update -Zminimal-versions
-        - cargo build
+        - cargo check
 
 before_install: set -e
 
