--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ caps = "0.3.1"
 [target.'cfg(target_os = "freebsd")'.dev-dependencies]
 sysctl = "0.1"
 
+[features]
+exclude_gnu = []
+
 [[test]]
 name = "test"
 path = "test/test.rs"
