--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -12,8 +12,7 @@ task:
     fingerprint_script: cat Cargo.lock || echo ""
   # Install Rust
   setup_script:
-    - pkg install -y curl
-    - curl https://sh.rustup.rs -sSf --output rustup.sh
+    - fetch https://sh.rustup.rs -o rustup.sh
     - sh rustup.sh -y --profile=minimal --default-toolchain 1.36.0
     - $HOME/.cargo/bin/rustup target add i686-unknown-freebsd
   amd64_test_script:
