fixup: use libc defined struct
This uses a patched libc and should not be merged until libc merges.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ bitflags = "1.0"
 cfg-if = "0.1.2"
 void = "1.0.2"
 
+[patch.crates-io]
+libc = { git = "https://github.com/mcpherrinm/libc" }
+
 [target.'cfg(target_os = "dragonfly")'.build-dependencies]
 cc = "1"
 
