feature-gate most Nix functions
Using features reduces build time and size for consumer crates.  By
default all features are enabled.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -20,6 +20,8 @@ build: &BUILD
     - $TOOL +$TOOLCHAIN $BUILD $ZFLAGS --target $TARGET --all-targets
     - $TOOL +$TOOLCHAIN doc $ZFLAGS --no-deps --target $TARGET
     - $TOOL +$TOOLCHAIN clippy $ZFLAGS --target $TARGET -- $CLIPPYFLAGS
+    - if [ -z "$NOHACK" ]; then $TOOL install cargo-hack; fi
+    - if [ -z "$NOHACK" ]; then $TOOL hack $ZFLAGS check --target $TARGET --each-feature; fi
 
 # Tests that do require executing the binaries
 test: &TEST
@@ -50,14 +52,16 @@ task:
     - cargo build --target i686-unknown-freebsd
     - cargo doc --no-deps --target i686-unknown-freebsd
     - cargo test --target i686-unknown-freebsd
+  i386_feature_script:
+    - . $HOME/.cargo/env
+    - cargo hack check --each-feature --target i686-unknown-freebsd
   before_cache_script: rm -rf $CARGO_HOME/registry/index
 
 # Test OSX in a full VM
 task:
-  matrix:
-    - name: OSX x86_64
-      env:
-        TARGET: x86_64-apple-darwin
+  name: OSX x86_64
+  env:
+    TARGET: x86_64-apple-darwin
   osx_instance:
     image: catalina-xcode
   setup_script:
@@ -192,6 +196,8 @@ task:
     # https://github.com/rust-embedded/cross/issues/535
     - name: iOS aarch64
       env:
+        # cargo hack tries to invoke the iphonesimulator SDK for iOS
+        NOHACK: 1
         TARGET: aarch64-apple-ios
         # Rustup only supports cross-building from arbitrary hosts for iOS at
         # 1.49.0 and above.  Below that it's possible to cross-build from an OSX
@@ -199,6 +205,8 @@ task:
         TOOLCHAIN: 1.49.0
     - name: iOS x86_64
       env:
+        # cargo hack tries to invoke the iphonesimulator SDK for iOS
+        NOHACK: 1
         TARGET: x86_64-apple-ios
         TOOLCHAIN: 1.49.0
     # Cross testing on powerpc fails with "undefined reference to renameat2".
@@ -222,6 +230,8 @@ task:
         TARGET: x86_64-unknown-netbsd
     - name: Redox x86_64
       env:
+        # cargo-hack needs a newer compiler
+        NOHACK: 1
         TARGET: x86_64-unknown-redox
         # Redox requires a nightly compiler.
         # If stuff breaks, change nightly to the date in the toolchain_*
@@ -269,6 +279,6 @@ task:
     image: rustlang/rust:nightly
   setup_script:
     - cargo update -Zminimal-versions
-  script:
+  check_script:
     - cargo check
   before_cache_script: rm -rf $CARGO_HOME/registry/index
