--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # Based on the "trust" template v0.1.1
 # https://github.com/japaric/trust/tree/v0.1.1
 
-dist: trusty
+dist: bionic
 language: rust
 services: docker
 
