Fix crash if no files are changed
Signed-off-by: Alex Saveau <saveau.alexandre@gmail.com>

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -311,4 +311,4 @@ task:
   container:
     image: rustlang/rust:nightly
   check_script:
-    - git diff --name-only --diff-filter=ACMRT $CIRRUS_BASE_SHA HEAD -- '*.rs' | xargs rustfmt --check
+    - git diff --name-only --diff-filter=ACMRT $CIRRUS_BASE_SHA HEAD -- '*.rs' | xargs --no-run-if-empty rustfmt --check
