--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -262,10 +262,8 @@ task:
   name: Redox x86_64
   env:
     TARGET: x86_64-unknown-redox
-    # Redox requires a nightly compiler.
-    # If stuff breaks, change nightly to the date at
-    # https://gitlab.redox-os.org/redox-os/redox/-/blob/master/rust-toolchain
-    TOOLCHAIN: nightly-2021-06-15
+    # Redox's MSRV policy is unclear.  Until they define it, use nightly.
+    TOOLCHAIN: nightly
   setup_script:
     - rustup target add $TARGET
     - rustup toolchain install $TOOLCHAIN --profile minimal --target $TARGET
